Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20848

[REG 4.6.2->4.7.0] Extra empty lines in Debug windows appears starting from 4.7.0 (4.6.2 seems fine)

XMLWordPrintable

    • Windows
    • 17e6cb5ff714cdfe5c1519e9d7fcbdd1bba77fef

      Extra empty lines in Debug windows appears starting from 4.7.0 (4.6.2 seems fine).

      Attached is empty Qt-widgets project wheere I only added

      qDebug() << "Test";
      QThread::sleep(3);
      qDebug() << "Test";

      in main.cpp

      As the result of "Run" under QtCreator4.7.0 I see in the "Application Output" window strage "gap" between to "Test"s:

      Test
      
      
      
      
      
      
      
      
      
      
      
      
      
      Test
      

      And I see expected output

       

      Test
      Test
      

       

      in QtCreator 4.6.2

      Extra lines appears sequentially with period about 0.5-1 sec. So if one change sleep(3); to sleep(5); the gap will be larger! There is some kind of timer appearing from nowhere and influencing Application Output window?

        1. Test.zip
          2 kB
        2. CPU_Ready.png
          CPU_Ready.png
          13 kB
        3. untitled1.7z
          2 kB
        4. Screenshot_1.png
          Screenshot_1.png
          40 kB
        5. BugRecordered.gif
          BugRecordered.gif
          953 kB
        6. qtcportable_test.7z
          11 kB
        7. Folders.png
          Folders.png
          43 kB
        8. DbgView1.png
          DbgView1.png
          97 kB
        9. DbgView2.png
          DbgView2.png
          173 kB
        10. DbgViewTest.txt
          4 kB
        11. SecondRun.png
          SecondRun.png
          6 kB
        For Gerrit Dashboard: QTCREATORBUG-20848
        # Subject Branch Project Status CR V

            hjk hjk
            progrev Prav Ogrev
            Votes:
            10 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes