ProjectExplorer: do not send non existing debug output

Task-number: QTCREATORBUG-20848
Fixes: QTCREATORBUG-21215
Change-Id: I55366b42a94721ea800d0babe72f24d343d55de2
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>